--- a/console/config.json
+++ b/console/config.json
@@ -2,7 +2,7 @@
     "mysql": {
         "host": "127.0.0.1",
         "port": 3306,
-        "database": "fmea",
+        "database": "t",
         "user": "root",
         "password": "123456"
     },
