--- a/console/requirements.txt
+++ b/console/requirements.txt
@@ -12,13 +12,14 @@ Flask-Migrate==2.1.1
 Flask-Moment==0.6.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 jsmin==2.2.2
 Mako==1.0.7
 MarkupSafe==1.0
-mysqlclient==1.3.12
+PyMySQL==0.8.1
 python-dateutil==2.7.2
 python-editor==1.0.3
 pytz==2018.4
